--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -7,19 +7,11 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form method="POST">
-        <!-- CSRF token -->
-        {{ form.csrf_token }}
-        
-        <!-- Username field -->
-        <label for="username">Username:</label>
-        {{ form.username }}
-
-        <!-- Password field -->
-        <label for="password">Password:</label>
-        {{ form.password }}
-
-        <!-- Submit button -->
+    <form method="POST" action="{{ url_for('login') }}">
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br>
         <button type="submit">Login</button>
     </form>
 </body>
